lib/kitt/tmpl/apps/kyso-scs/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: __APP__
  namespace: __NAMESPACE__
  labels:
    app.kubernetes.io/name: __APP__
spec:
  replicas: 1
  selector:
    matchLabels:
      app: __APP__
  template:
    annotations:
      backup.velero.io/__BACKUP_ACTION__: __APP__-datadir
    metadata:
      labels:
        app: __APP__
    spec:
      containers:
      - name: nginx
        image: __SCS_NGINX_IMAGE__
        imagePullPolicy: "__IMAGE_PULL_POLICY__"
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - mountPath: /sftp
          name: __APP__-datadir
      - name: mysecureshell
        image: __SCS_MYSSH_IMAGE__
        imagePullPolicy: "__IMAGE_PULL_POLICY__"
        ports:
        - containerPort: 22
          name: ssh
        securityContext:
          capabilities:
            add:
            - IPC_OWNER
        volumeMounts:
        - mountPath: /fileSecrets
          name: __APP__-file-secrets
          readOnly: true
        - mountPath: /sftp
          name: __APP__-datadir
      - name: kyso-indexer
        image: __INDEXER_IMAGE__
        imagePullPolicy: "__IMAGE_PULL_POLICY__"
        ports:
        - containerPort: 8080
          name: indexer-http
        volumeMounts:
        - mountPath: /work/config
          name: kyso-indexer-config
          readOnly: true
        - mountPath: /sftp
          name: __APP__-datadir
      volumes:
      - name: __APP__-file-secrets
        secret:
          secretName: __MYSSH_SECRET__
      - name: __APP__-datadir
        persistentVolumeClaim:
          claimName: __PVC_NAME__
      - name: kyso-indexer-config
        configMap:
          name: kyso-indexer-config
