lib/kitt/tmpl/apps/kyso-scs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: __APP__-svc
  namespace: __NAMESPACE__
  labels:
    app.kubernetes.io/name: __APP__
spec:
  ports:
  - name: ssh
    port: 22
    protocol: TCP
    targetPort: 22
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: indexer-http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: __APP__
